compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__as_module_const.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\n          pub const data = <<\n            0x1,\n            2,\n            2:size(16),\n            0x4:size(32),\n            -1:32,\n            \"Gleam\":utf8,\n            4.2:float,\n            4.2:32-float,\n            <<\n              <<1, 2, 3>>:bits,\n              \"Gleam\":utf8,\n              1024\n            >>:bits\n          >>\n        "
---
----- SOURCE CODE

          pub const data = <<
            0x1,
            2,
            2:size(16),
            0x4:size(32),
            -1:32,
            "Gleam":utf8,
            4.2:float,
            4.2:32-float,
            <<
              <<1, 2, 3>>:bits,
              "Gleam":utf8,
              1024
            >>:bits
          >>
        

----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt, stringBits, sizedFloat } from "../gleam.mjs";

export const data = /* @__PURE__ */ toBitArray([
  0x1n,
  2n,
  sizedInt(2n, 16n, true),
  sizedInt(0x4n, 32n, true),
  sizedInt(-1n, 32n, true),
  stringBits("Gleam"),
  sizedFloat(4.2, 64, true),
  sizedFloat(4.2, 32n, true),
  /* @__PURE__ */ toBitArray([
    /* @__PURE__ */ toBitArray([1n, 2n, 3n]).buffer,
    stringBits("Gleam"),
    1024n,
  ]).buffer,
]);
