compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__not_byte_aligned_variable.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  let x = 4\n  <<256:size(x)>>\n}\n"
---
----- SOURCE CODE

fn go() {
  let x = 4
  <<256:size(x)>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedInt } from "../gleam.mjs";

function go() {
  let x = 4n;
  return toBitArray([sizedInt(256n, x, true)]);
}
